--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,6 @@ services:
   - type: web
     name: satellite-trajectory-api
     env: python
+    pythonVersion: 3.10
     buildCommand: pip install -r app/requirements.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port 8000
