--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,6 @@ services:
   - type: web
     name: satellite-trajectory-api
     env: python
-    pythonVersion: 3.7
-    buildCommand: pip install -r app/requirements.txt
+    pythonVersion: 3.9
+    buildCommand: pip install -r requirements.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port 8000
